# numsim-propex

./: .gitignore  CMakeLists.txt  LICENSE  README.md  project-meta-info.in
include/propex/: key_traits.h  ownership_policies.h  property_view.h  propex_fwd.h  propex_node.h  propex_registry.h
tests/: CMakeLists.txt  key_traits_test.h  main.cpp  property_view_test.h  registry_test.h
